Moved GraphQL project in BFF solution folder.

--- a/blogger-bff/blogger-bff/blogger-bff.csproj
+++ b/blogger-bff/blogger-bff/blogger-bff.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\blogger-graphQL\blogger-graphQL.csproj" />
+    <ProjectReference Include="..\blogger-graphQL\blogger-graphQL.csproj" />
   </ItemGroup>
 
 </Project>
