--- a/blogger-client/package.json
+++ b/blogger-client/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.22",
     "bootstrap": "^4.1.3",
+    "graphql": "^14.0.2",
     "jquery": "^3.3.1",
     "react": "^16.6.0",
+    "react-apollo": "^2.3.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
     "react-scripts": "2.1.1",
@@ -20,7 +23,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "homepage":"./",
+  "homepage": "./",
   "browserslist": [
     ">0.2%",
     "not dead",
