--- a/blogger-client/package.json
+++ b/blogger-client/package.json
@@ -11,6 +11,8 @@
     "react-apollo": "^2.3.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-tabs": "^2.3.0"
   },
