--- a/blogger-client/package.json
+++ b/blogger-client/package.json
@@ -6,6 +6,7 @@
     "apollo-boost": "^0.1.22",
     "bootstrap": "^4.1.3",
     "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "jquery": "^3.3.1",
     "react": "^16.6.0",
     "react-apollo": "^2.3.2",
